@@ -27,12 +27,12 @@ $_POST = sanitize_array($_POST);
 
 //var_dump($_GET); // DEBUGGING
 
-$_GET['mode'] = str_replace("/","", $_GET['mode']);
+$_GET['url_var'] = str_replace("/","", $_GET['url_var']);
 $_GET['key'] = str_replace("/","", $_GET['key']);
 
 
 // Logout
-if ( $_GET['section'] == 'online-account' && $_GET['mode'] == 'logout' ) {
+if ( $_GET['section'] == 'online-account' && $_GET['url_var'] == 'logout' ) {
 // Delete user login session data
 $_SESSION['user'] = FALSE;
 header("Location: /");
@@ -87,7 +87,7 @@ elseif ( $_GET['section'] == 'list-transactions' ) {
 $dyn_title = '- List Transactions';
 }
 elseif ( $_GET['section'] == 'online-account' ) {
-$dyn_title = '- Online Account' . ( $_GET['mode'] ? ' - ' . ucfirst($_GET['mode']) : '' );
+$dyn_title = '- Online Account' . ( $_GET['url_var'] ? ' - ' . ucfirst($_GET['url_var']) : '' );
 }
 
 
