@@ -3,4 +3,5 @@
  * Copyright 2018 GPLv3, Zillexplorer by Mike Kilday: http://DragonFrugal.com
  */
 ?>
-LIST TRANSACTIONS
+
+Feature not possible yet, waiting on a global transaction API to be implemented.
