@@ -53,6 +53,8 @@
 -------------------------------------------------------------------
 0.0.9:
 -Global user input sanitization
+-Pagination for multiple results pages
+-'View All' DS / TX blocks pages
 -------------------------------------------------------------------
 
 
